--- a/styles/about.css
+++ b/styles/about.css
@@ -18,18 +18,15 @@ body {
     text-decoration: none;
     font-size: 17px;
 }
-
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
-
 .main {
     height: 1000px;
     width: auto;
     background-color: rgb(223, 225, 185);
 }
-
 footer {
     overflow: hidden;
     background-color: rgb(183, 148, 88);
@@ -37,52 +34,49 @@ footer {
     padding: 14px 16px;
     color: #f2f2f2;
 }
-
 .topnav a.active {
     background-color: rgb(223, 225, 185);;
     color: white;
 }
-
 .brand img {
     float: left;
     width: 100px;
     height: 100px;
- 
-  }
-
+}
 .brand h1{
     position: relative;
     text-align: center;
     font-size: 30px;
     color: brown;
 }
-
 .brand h3{
     font-family: fantasy;
     position: relative;
     text-align: center;
 }
-.column {
-    float: left;
-    width: 305px;
-    padding: 5px;
-}
-
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
+.main h3{
+    font-size: 40px;
+    text-align: center;
+    color:  rgb(22, 120, 127);;
 }
 .main h1{
-    font-size: 100px;
-    text-align: center;
-    color: rgb(22, 120, 127);
-}
-.main p{
-    font-size: 30px;
     font-family: cursive;
-    text-indent: 30px;
+    text-align: center;
+}
+.btn{
+    text-align: center;
+   
+}
+.btn button{
+    color: rgb(133, 25, 39);
+    font-size: 20px;
+    border-radius: 8px;
 }
 footer{
     text-align: center;
+}
+.main1 h3{
+    font-size: 40px;
+    text-align: center;
+    color:  rgb(22, 120, 127);;
 }
