--- a/styles/booking-conformation.css
+++ b/styles/booking-conformation.css
@@ -1,3 +1,20 @@
 .main {
     text-align: center;
+    color: blueviolet;
+    font-weight: bolder;
+    
+}
+
+.desc{
+    color: red;
+    background-color: wheat;
+}
+
+.location{
+    border: 7px solid black;
+}
+
+.bc1, .bc2{
+    color: black;
+    background-color: wheat;
 }
