--- a/styles/booking-page-style.css
+++ b/styles/booking-page-style.css
@@ -19,6 +19,7 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    text-align: center;
 }
 
 input[type=submit]:hover {
