--- a/styles/manu-style.css
+++ b/styles/manu-style.css
@@ -1,42 +1,37 @@
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
-    text-align: center;
-    font-family: arial;
-    display: inline;
-}
-
 .card img {
     float: left;
     height: 100px;
     width: 100px;
 }
 
+/* .card h1 {
+    font-size: 12px;
+} */
+
+.card p {
+    float: right;
+    width: auto;
+    font-size: 12px;
+}
+
 .price {
-    color: grey;
-    font-size: 22px;
+    color: rgb(201, 25, 25);
     float: right;
 }
 
-.card button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
+.card {
+    /* border: 10px;
+    border-style: dashed; */
+    height: auto;
     text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
+    font-family: arial;
+    /* display: inline; */
+    border-style: dashed;
+    background-color: rgb(92, 136, 176);
+    margin: 10px 10px 10px 10px;
+    padding: 10px 10px 60px 10px;
 }
 
-.card button:hover {
-    opacity: 0.7;
-}
-
-.main {
-    height: 100%;
-    width: auto;
-    background-color: rgb(223, 225, 185);
+.card :hover {
+    background-color: rgb(183, 80, 80);
 }
