--- a/styles/feedback-page-style.css
+++ b/styles/feedback-page-style.css
@@ -1,3 +1,60 @@
+.main {
+    overflow: scroll;
+}
+
 form {
     margin-top: 20px;
+    text-align: center;
+}
+
+.rate {
+    height: 46px;
+    padding: 0 10px;
+    text-align: center;
+}
+
+.rate:not(:checked)>input {
+    position: absolute;
+    top: -9999px;
+}
+
+.rate:not(:checked)>label {
+    float: right;
+    width: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    font-size: 30px;
+    color: #ccc;
+}
+
+.rate:not(:checked)>label:before {
+    content: '★ ';
+}
+
+.rate>input:checked~label {
+    color: #ffc700;
+}
+
+.rate:not(:checked)>label:hover,
+.rate:not(:checked)>label:hover~label {
+    color: #deb217;
+}
+
+.rate>input:checked+label:hover,
+.rate>input:checked+label:hover~label,
+.rate>input:checked~label:hover,
+.rate>input:checked~label:hover~label,
+.rate>label:hover~input:checked~label {
+    color: #c59b08;
+}
+
+.feedbackListing {
+    text-align: center;
+}
+
+.feedbackListing #feedback {
+    float: none;
+    border-style: double;
+    margin: 1%;
 }
