--- a/styles/style2.css
+++ b/styles/style2.css
@@ -28,6 +28,7 @@ body {
     height: 1000px;
     width: auto;
     background-color: rgb(223, 225, 185);
+    overflow: scroll;
 }
 
 footer {
@@ -39,7 +40,8 @@ footer {
 }
 
 .topnav a.active {
-    background-color: rgb(223, 225, 185);;
+    background-color: rgb(223, 225, 185);
+    ;
     color: white;
 }
 
@@ -47,21 +49,22 @@ footer {
     float: left;
     width: 100px;
     height: 100px;
- 
-  }
 
-.brand h1{
+}
+
+.brand h1 {
     position: relative;
     text-align: center;
     font-size: 30px;
     color: brown;
 }
 
-.brand h3{
+.brand h3 {
     font-family: fantasy;
     position: relative;
     text-align: center;
 }
+
 .column {
     float: left;
     width: 305px;
@@ -73,35 +76,42 @@ footer {
     clear: both;
     display: table;
 }
-.main h1{
-    margin:0;
-    padding:0;
+
+.main h1 {
+    margin: 0;
+    padding: 0;
     font-size: 100px;
     text-align: center;
     color: rgb(22, 120, 127);
 }
-.main h6{
-    text-indent:900px;
+
+.main h6 {
+    text-indent: 900px;
     font-size: 15px;
 }
-.main p{
+
+.main p {
     font-size: 30px;
     font-family: cursive;
     text-indent: 30px;
 }
-footer{
+
+footer {
     text-align: center;
 }
-.btn{
+
+.btn {
     text-align: center;
-   
+
 }
-.btn button{
+
+.btn button {
     color: rgb(133, 25, 39);
     font-size: 15px;
     border-radius: 8px;
 }
-h5{
+
+h5 {
     text-align: center;
     color: red;
 }
